--- a/engels/overmijEN.css
+++ b/engels/overmijEN.css
@@ -68,24 +68,32 @@ li.dropdown {
     display: block;
 }
 
-/*de korte uitleg dingen*/
-.mycontainer {
+/*de footer*/
+
+footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
     display: flex;
-    padding: 100px;
+    flex-direction: row;
+    padding: 3px;
+    background-color: #6a994E;
+    color: white;
 }
 
-.mycontainer>div {
-    width: 50%;
+footer #rechts {
+    margin-left: auto;
+    margin-right: 10px;
+
 }
 
-img {
-    width: 500px;
+footer #links {
+    margin-left: 10px;
+    margin-right: auto;
 }
 
-.shadow {
-    padding-left: 25px;
-}
 
+/*de shadow en border van images*/
 .shadow img {
     transition: .5s ease;
 }
@@ -110,24 +118,35 @@ img {
     transition: .5s ease;
 }
 
-/*de footer*/
 
-footer {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    padding: 3px;
-    background-color: #6a994E;
+/*De cards*/
+.grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 20px;
+    align-items: stretch;
+    justify-items: center;
+}
+
+.grid>article {
+    border: 1px solid #ccc;
+    box-shadow: 2px 2px 6px 0px rgba(0, 0, 0, 0.3);
+    width: 60%;
+    background-color: #F5D6A9;
+}
+
+.grid>article img {
+    max-width: 100%;
+}
+
+.text {
+    padding: 0 20px 20px;
+}
+
+.text>button {
+    background: gray;
+    border: 0;
     color: white;
-}
-footer #rechts{
-margin-left: auto;
-margin-right: 10px;
-
-}
-footer #links{
-    margin-left: 10px;
-margin-right: auto;
+    padding: 10px;
+    width: 100%;
 }
