--- a/engels/indexEN.css
+++ b/engels/indexEN.css
@@ -1,6 +1,8 @@
 body {
     background-color: #F2E8CF;
     margin: 0;
+    min-height: 100vh;
+    position: relative;
 }
 
 /*De navbar*/
@@ -79,7 +81,7 @@ li.dropdown {
 }
 
 img {
-    width: 250px;
+    width: 500px;
 }
 
 .shadow {
