--- a/nederlands/overmijNl.css
+++ b/nederlands/overmijNl.css
@@ -1,6 +1,8 @@
 body {
     background-color: #F2E8CF;
     margin: 0;
+    min-height: 100vh;
+    position: relative;
 }
 
 /*De navbar*/
@@ -68,29 +70,7 @@ li.dropdown {
     display: block;
 }
 
-/*de footer*/
 
-footer {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    padding: 3px;
-    background-color: #6a994E;
-    color: white;
-}
-
-footer #rechts {
-    margin-left: auto;
-    margin-right: 10px;
-
-}
-
-footer #links {
-    margin-left: 10px;
-    margin-right: auto;
-}
 
 
 /*de shadow en border van images*/
@@ -149,4 +129,34 @@ footer #links {
     color: white;
     padding: 10px;
     width: 100%;
+}
+
+
+
+
+
+/*de footer*/
+
+footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    display: flex;
+    height: 50px;
+    flex-direction: row;
+    padding: 3px;
+    background-color: #6a994E;
+    color: white;
+    
+}
+
+footer #rechts {
+    margin-left: auto;
+    margin-right: 10px;
+
+}
+
+footer #links {
+    margin-left: 10px;
+    margin-right: auto;
 }
