--- a/nederlands/overmijNl.css
+++ b/nederlands/overmijNl.css
@@ -5,8 +5,7 @@ body {
     position: relative;
 }
 
-/*De navbar*/
-ul {
+ul.topnav {
     list-style-type: none;
     margin: 0;
     padding: 0;
@@ -14,17 +13,12 @@ ul {
     background-color: #6a994E;
 }
 
-li {
+ul.topnav li {
     float: left;
     border-right: 1px solid #a7c957;
 }
 
-li:last-child {
-    border-right: none;
-}
-
-li a,
-.dropbtn {
+ul.topnav li a {
     display: block;
     color: white;
     text-align: center;
@@ -32,18 +26,15 @@ li a,
     text-decoration: none;
 }
 
-li a:hover:not(.active) {
+ul.topnav li a:hover:not(.active) {
     background-color: #bc4749;
 }
 
-.active {
+ul.topnav li a.active {
     background-color: #386641;
 }
 
-li.dropdown {
-    display: inline-block;
 
-}
 
 .dropdown-content {
     display: none;
@@ -147,9 +138,17 @@ footer {
     padding: 3px;
     background-color: #6a994E;
     color: white;
-    
-}
 
+}
+footer button{
+    text-decoration: none;
+    color: white;
+    background-color: #bc4749;
+}
+footer button a{
+    text-decoration: none;
+    color: white;
+}
 footer #rechts {
     margin-left: auto;
     margin-right: 10px;
@@ -159,4 +158,21 @@ footer #rechts {
 footer #links {
     margin-left: 10px;
     margin-right: auto;
+}
+
+@media screen and (max-width: 480px) {
+    ul.topnav li {
+        float: none;
+    }
+
+    .dropdown-content {
+        min-width: 100%
+    }
+
+    .grid {
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
+        align-content: center;
+    }
 }
