--- a/nederlands/werkervaringNL.css
+++ b/nederlands/werkervaringNL.css
@@ -4,9 +4,7 @@ body {
     min-height: 100vh;
     position: relative;
 }
-
-/*De navbar*/
-ul {
+ul.topnav {
     list-style-type: none;
     margin: 0;
     padding: 0;
@@ -14,17 +12,12 @@ ul {
     background-color: #6a994E;
 }
 
-li {
+ul.topnav li {
     float: left;
     border-right: 1px solid #a7c957;
 }
 
-li:last-child {
-    border-right: none;
-}
-
-li a,
-.dropbtn {
+ul.topnav li a {
     display: block;
     color: white;
     text-align: center;
@@ -32,18 +25,15 @@ li a,
     text-decoration: none;
 }
 
-li a:hover:not(.active) {
+ul.topnav li a:hover:not(.active) {
     background-color: #bc4749;
 }
 
-.active {
+ul.topnav li a.active {
     background-color: #386641;
 }
 
-li.dropdown {
-    display: inline-block;
 
-}
 
 .dropdown-content {
     display: none;
@@ -69,7 +59,9 @@ li.dropdown {
 .dropdown:hover .dropdown-content {
     display: block;
 }
-
+.vervanger{
+    display: none;
+}
 #center {
     text-align: center;
 }
@@ -126,7 +118,15 @@ footer {
     color: white;
 
 }
-
+footer button{
+    text-decoration: none;
+    color: white;
+    background-color: #bc4749;
+}
+footer button a{
+    text-decoration: none;
+    color: white;
+}
 footer #rechts {
     margin-left: auto;
     margin-right: 10px;
@@ -137,3 +137,15 @@ footer #links {
     margin-left: 10px;
     margin-right: auto;
 }
+@media screen and (max-width: 480px) {
+    ul.topnav li {float: none;}
+    .dropdown-content {
+        min-width: 100%
+    }
+    #ervaring{
+        display: none;
+    }
+    .vervanger{
+        display: block;
+    }
+  }
