--- a/nederlands/schoolcarriereNL.css
+++ b/nederlands/schoolcarriereNL.css
@@ -5,8 +5,7 @@ body {
     position: relative;
 }
 
-/*De navbar*/
-ul {
+ul.topnav {
     list-style-type: none;
     margin: 0;
     padding: 0;
@@ -14,17 +13,12 @@ ul {
     background-color: #6a994E;
 }
 
-li {
+ul.topnav li {
     float: left;
     border-right: 1px solid #a7c957;
 }
 
-li:last-child {
-    border-right: none;
-}
-
-li a,
-.dropbtn {
+ul.topnav li a {
     display: block;
     color: white;
     text-align: center;
@@ -32,18 +26,15 @@ li a,
     text-decoration: none;
 }
 
-li a:hover:not(.active) {
+ul.topnav li a:hover:not(.active) {
     background-color: #bc4749;
 }
 
-.active {
+ul.topnav li a.active {
     background-color: #386641;
 }
 
-li.dropdown {
-    display: inline-block;
 
-}
 
 .dropdown-content {
     display: none;
@@ -84,7 +75,15 @@ footer {
     background-color: #6a994E;
     color: white;
 }
-
+footer button{
+    text-decoration: none;
+    color: white;
+    background-color: #bc4749;
+}
+footer button a{
+    text-decoration: none;
+    color: white;
+}
 footer #rechts {
     margin-left: auto;
     margin-right: 10px;
@@ -95,26 +94,33 @@ footer #links {
     margin-left: 10px;
     margin-right: auto;
 }
-h2{
+
+h2 {
     text-align: center;
 }
 
-.container{
+.uitleg {
+    display: none;
+}
+
+.container {
     text-align: center;
 }
 
 
-img{
+img {
     width: 100%;
     height: 100%;
 }
-.row{
+
+.row {
     display: inline-block;
 }
-.column{
-    
-  float: left;
-  
+
+.column {
+
+    float: left;
+
 }
 
 .flip-box {
@@ -123,37 +129,61 @@ img{
     height: 400px;
     border: 1px solid #f1f1f1;
     perspective: 1000px;
-  }
-  
-  .flip-box-inner {
+}
+
+.flip-box-inner {
     position: relative;
     width: 100%;
     height: 100%;
     text-align: center;
     transition: transform 0.8s;
     transform-style: preserve-3d;
-  }
-  
-  .flip-box:hover .flip-box-inner {
+}
+
+.flip-box:hover .flip-box-inner {
     transform: rotateY(180deg);
-  }
-  
-  .flip-box-front, .flip-box-back {
+}
+
+.flip-box-front,
+.flip-box-back {
     position: absolute;
     width: 500px;
     height: 400px;
     -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
-  }
-  
-  .flip-box-front {
+}
+
+.flip-box-front {
     background-color: #6a994E;
     color: black;
-  }
-  
-  .flip-box-back {
+}
+
+.flip-box-back {
     background-color: #6a994E;
     color: white;
     transform: rotateY(180deg);
-    
-  }
+
+}
+
+@media screen and (max-width: 480px) {
+    ul.topnav li {
+        float: none;
+    }
+
+    .dropdown-content {
+        min-width: 100%
+    }
+
+    .flip-box:hover .flip-box-inner {
+        transform: rotateY(0deg);
+    }
+
+    .flip-box:active .flip-box-inner {
+        transform: rotateY(180deg);
+    }
+
+    .uitleg {
+        display: block;
+        text-align: center;
+    }
+}
